tests/diagnostics/packages/import_usage/imported_constant_type_mismatch_transitive_imports/expect.txt
# exit: 1
lib.coppice:4:12: error: return type mismatch: expected string, got int64
      return TOP
             ^
